[tool.poetry]
name = "test-sublibrary"
version = "0.1.0"
description = "Shared utility sublibrary"
authors = ["You <you@example.com>"]
packages = [{ include = "test_sublibrary", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
